--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.qameta.allure' version '2.11.2' // Allure plugin version
 }
 
 group = 'org.example'
@@ -14,12 +15,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
     implementation 'io.github.bonigarcia:webdrivermanager:5.0.3'
-    // Selenium for testing
-    testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.25.0'
-
-    // Commons IO for file operations, if needed
-    testImplementation group: 'commons-io', name: 'commons-io', version: '2.17.0'
-    testImplementation 'com.google.code.gson:gson:2.8.8' // For JSON parsing
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
+    testImplementation 'commons-io:commons-io:2.17.0'
+    testImplementation 'com.google.code.gson:gson:2.8.8'
+    testImplementation 'io.qameta.allure:allure-junit5:2.17.3' // Allure JUnit5 integration
 }
 
 test {
